// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventCards /> should render correcly when status is allowed 1`] = `
<div
  className="card text-dark bg-white mb-3 mx-auto"
  style={
    Object {
      "maxWidth": "20rem",
    }
  }
>
  <div
    className="card-header d-flex justify-content-between"
  >
    <span
      className="h4 mb-0"
    >
      test-event
    </span>
    <span>
      <a
        className="mr-2"
        href="/editEvent"
        onClick={[Function]}
      >
        <i
          className="fa fa-pencil"
          id={1}
          onClick={[Function]}
        />
      </a>
      <a
        className="text-primary"
        href="#"
      >
        <i
          className="fa fa-trash"
          id={1}
          onClick={[Function]}
        />
      </a>
    </span>
  </div>
  <div
    className="card-body"
  >
    <div
      className=""
    >
      <p
        className="card-text"
      >
        test description
      </p>
      <p
        className="mb-1"
      >
        <i
          aria-hidden="true"
          className="fa fa-map-marker fa-fw"
        />
         
        test-center1
      </p>
      <span>
        12/34/2020
         
      </span>
    </div>
  </div>
  <div
    className="card-footer text-success text-center"
  >
    <i
      className="fa fa-check"
    />
     
    <span>
      Allowed
    </span>
  </div>
</div>
`;

exports[`<EventCards /> should render correctly when status is canceled 1`] = `
<div
  className="card text-dark bg-white mb-3 mx-auto"
  style={
    Object {
      "maxWidth": "20rem",
    }
  }
>
  <div
    className="card-header d-flex justify-content-between"
  >
    <span
      className="h4 mb-0 text-muted"
    >
      test-event
    </span>
    <span>
      <a
        className="text-primary"
        href="#"
      >
        <i
          className="fa fa-trash"
          id={1}
          onClick={[Function]}
        />
      </a>
    </span>
  </div>
  <div
    className="card-body"
  >
    <div
      className="text-muted"
    >
      <p
        className="card-text"
      >
        test description
      </p>
      <p
        className="mb-1"
      >
        <i
          aria-hidden="true"
          className="fa fa-map-marker fa-fw"
        />
         
        test-center1
      </p>
      <span>
        12/34/2020
         
      </span>
    </div>
  </div>
  <div
    className="card-footer text-danger text-center"
  >
    <i
      className="fa fa-times-circle"
    />
     
    <span>
      Canceled
    </span>
  </div>
</div>
`;
